GitVersion1/objects/County_Community__c.object
<CustomObject>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <label>Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voivodeship__c</fullName>
        <label>Voivodeship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>County-Community</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>County-Community Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>County-Communities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>